# Facial-Recognition

./: AttentionAnalyzer.cpp  AttentionAnalyzer.h  CMakeLists.txt  ClassroomAttentionDemo.pro  ControllerLogic.cpp  ControllerLogic.h  DeviceController.cpp  DeviceController.h  EmotionAnalyzer.cpp  EmotionAnalyzer.h  EnvSensor.cpp  EnvSensor.h  MainWindow.cpp  MainWindow.h  main.cpp
